# ei-sdk-idf

./: CMakeLists.txt  idf_component.yml
model-parameters/: model_metadata.h  model_variables.h
tflite-model/: tflite_learn_43_compiled.cpp  tflite_learn_43_compiled.h
